@@ -1,3 +1,8 @@
+2008-08-31	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* timer/timer.c: Rename timer driver methods to follow RTEMS
+	programming conventions.
+
 2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* clock/ckinit.c: Eliminate the clicks_per_microsecond field in the
